Working installer, still a lot hardcoded.